fix: Add feed bg colour for shimmer in dark mode

--- a/client/src/app/routes/stardust/Landing.scss
+++ b/client/src/app/routes/stardust/Landing.scss
@@ -242,8 +242,9 @@
         }
     }
 
-    .feeds-wrapper {
+    .feeds-wrapper.shimmer {
         display: flex;
+        background: var(--shimmer-feeds-bg);
         justify-content: center;
         padding: 0 $inner-padding 44px;
 
